NOD-690: fix naming